# kicad_monkey

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEFERRED_FAILURES.toml  HELPER_TOOL_INVENTORY.toml  README.md  REQUIREMENTS.md  __init__.py  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.html  setup.html
docs/adrs/: ADR-001-kicad-src-layout-and-api-conventions.md  ADR-002-kicad-test-corpus-and-lanes.md  ADR-003-design-doc-and-test-ownership-signoff.md
docs/contracts/: README.md  interface_design_manifest.v0.json  pcb_svg_enrichment_a0.schema.json  schematic_svg_enrichment_a0.schema.json  svg.md
docs/design/: README.md  index.html  quality-signoff-status.md  styles.css
docs/plans/: 0001-plotters-add-RECORDER_PLOTTER-for-IR-cross-validatio.patch  0002-eeschema-env-var-hook-to-plug-RECORDER_PLOTTER-into-.patch  0003-eeschema-default-empty-page-number-to-1-in-RECORDER_.patch  2026-06-01-pcb-svg-oracle-hardening-plan.md  2026-06-02-svg-enrichment-contract-plan.md  KICAD_MONKEY_REWORK_PLAN.md  (+3 more)
scripts/: build_kicad_corpus_manifest.py  build_kicad_ir_coverage_report.py  generate_kicad_synthetic_boards.py  generate_kicad_synthetic_corpus.py  generate_kicad_synthetic_dimensions.py  generate_kicad_synthetic_netlist_fixture.py  package_kicad_corpus.py  sync_upstream_qa_netlist_fixtures.py
tests/: .gitignore  README.md  _suite_paths.py  cleanup_test_inputs.py  conftest.py  generate_board_svg_references.py  generate_board_svg_review.py  generate_cli_svg_comparison.py  generate_manifest_svg_review.py  generate_svg_references.py  generate_symbol_svg_review.py  generate_synthetic_board_svg_oracles.py  generate_viewer_data.py  kicad_cli_resolver.py  rack.py  rack.toml  synthetic_board_svg_oracle.py
(+296 files in other folders)
