[project]
name = "kicad-monkey"
version = "2026.5.31"
description = "Core KiCad parser, round-trip, and 2D rendering tooling"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Wavenumber LLC" },
]
dependencies = [
    "colorama",
    "freetype-py",
    "numpy",
    "shapely",
    "trimesh",
    "uharfbuzz",
    "zstandard",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-json-report",
    "tomli-w>=1.2.0",
    "wn-rack>=1.1.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-json-report",
    "tomli-w>=1.2.0",
    "wn-rack>=1.1.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/kicad_monkey"
Repository = "https://github.com/wavenumber-eng/kicad_monkey"
Issues = "https://github.com/wavenumber-eng/kicad_monkey/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py/kicad_monkey"]

[tool.hatch.build.targets.sdist]
include = [
    "src/py/**",
    "tests/**",
    "docs/**",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "LICENSE",
    "AGENTS.md",
    "pyproject.toml",
]
exclude = [
    "docs/plans/**",
    "docs/research/**",
    "rack_results/**",
    "tests/corpus/**",
    "tests/**/output/**",
    "**/__pycache__/**",
]

[tool.hatch.version]
path = "src/py/kicad_monkey/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/py", ".."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: long-running private test lanes",
]
